k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-frontend-chlruddlf73
  labels:
    name: assignment
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: sso
      student: chlruddlf73
  template:
    metadata:
      labels:
        component: sso
        student: chlruddlf73
    spec:
      containers:
        - name: static
          image: ensaas/sso-frontend:v1.0.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 20m
              memory: 32Mi
              ephemeral-storage: 32Mi
            requests:
              cpu: 10m
              memory: 32Mi
