k8s/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: chlruddlf73
  labels:
    name: assignment
spec:
  type: ClusterIP
  selector:
    component: sso
    student: chlruddlf73
  ports:
    - port: 3000
      targetPort: 3000
