k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chlruddlf73
  labels:
    name: assignment
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: chlruddlf73.{namespace_name}.{cluster_name}.en.internal
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: chlruddlf73
                port:
                  number: 3000
